fdo#78153 SwTxtFrm::ManipOfst() requires a valid position

At least it seems that after setting the offset to the largest possible
value (instead of COMPLETE_STRING), things get back to normal.

Change-Id: I25fafd277eaf480f9ae232254ced3946589aa562