sw/source/core/text/txtfrm.cxx
@@ -831,7 +831,7 @@ static void lcl_ModifyOfst( SwTxtFrm* pFrm, sal_Int32 nPos, sal_Int32 nLen )
     while( pFrm )
     {
         if (nLen == COMPLETE_STRING)
-            pFrm->ManipOfst( COMPLETE_STRING );
+            pFrm->ManipOfst( pFrm->GetTxtNode()->GetTxt().getLength() );
         else
             pFrm->ManipOfst( pFrm->GetOfst() + nLen );
         pFrm = pFrm->GetFollow();
